# bubblewrap-launcher

./: .gitignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  package.json  rustfmt.toml  vite.config.js
.github/: FUNDING.yml
.github/workflows/: build.yml
src/: App.jsx  index.html  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: dialog.rs  games.rs  launcher.rs  mod.rs  settings.rs  steamgriddb.rs  storage.rs
src-tauri/src/utility/: dirs.rs
src/components/: AddGameModal.jsx  GameCard.jsx  LibraryView.jsx  Settings.jsx  Sidebar.jsx  TitleBar.jsx
src/styles/: globals.css
src/utility/: configSchema.js
