[package]
name = "bubblewrap-launcher"
version = "0.1.0"
edition = "2021"

[lib]
name = "bubblewrap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri            = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell  = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["v4"] }
reqwest     = { version = "0.13.4", features = ["json", "stream", "query"] }
dirs        = "6.0.0"
urlencoding = "2"
once_cell = "1"
nix = { version = "0.31.3", features = ["signal"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
